--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "fixme",
+  "name": "dustin-heisey-portfolio",
   "scripts": {
-    "start": "rm -rf _site && npx @11ty/eleventy --quiet && npm run assets && npx @11ty/eleventy --serve --quiet --incremental",
+    "start": "rm -rf _site && npm run assets && npx @11ty/eleventy --serve --quiet --incremental",
     "build": "rm -rf _site && npx @11ty/eleventy && npm run assets",
     "node_modules": "rm -rf node_modules && sudo npm install",
-    "assets": "svgo -f ./public/svg -o ./_site/svg && pwa-asset-generator ./public/favicon.svg ./_site/favicon --opaque false --favicon --type png --index && pwa-asset-generator ./public/favicon.svg ./_site/favicon --background '#fixme' --padding 'fixme%' --icon-only && pwa-asset-generator ./public/favicon.svg ./_site/favicon --background '#fixme' --splash-only --type png --padding 'fixme%'"
+    "assets": "svgo -f ./public/svg -o ./_site/svg && pwa-asset-generator ./public/favicon.svg ./_site/favicon --opaque false --favicon --type png --index && pwa-asset-generator ./public/favicon.svg ./_site/favicon --background '#F1DEC1' --padding '10%' --icon-only && pwa-asset-generator ./public/favicon.svg ./_site/favicon --background '#F1DEC1' --splash-only --type png --padding '10%'"
   },
   "dependencies": {
-    "@dh253/nds": "^1.1.2",
+    "@dh253/nds": "^1.2.0",
     "pwa-asset-generator": "^6.3.1"
   }
 }
